# AnhurDB-SDK

./: .gitignore  README.md  commit_all.sh  commit_autorelease.sh  commit_perms.sh  commit_readme.sh  commit_wheel.sh  debug_ci.sh  get_logs.sh  get_releases.sh  push_release_action.sh  wait_action.sh  wait_release.sh
.claude-plugin/: marketplace.json
.github/scripts/: generate-changelog.sh
.github/workflows/: ci.yml  release-golang.yml  release-plugin.yml  release-python.yml  release-typescript.yml  release.yml
docs/api/: REST_API.md
docs/claude/: CLAUDE_ANHURDB_INTEGRATION.md
docs/general/: ARCHITECTURE.md  MATHEMATICS.md
scripts/: commit_unify.sh  fix_git_submodule.sh  fix_releases.sh  release.sh  test.sh  test_git.sh  test_git2.sh
v2/: PARITY_SPEC.md
v2/golang/: CHANGELOG.md  README.md  anhurdb.go  e2e_live_test.go  go.mod
v2/python/: CHANGELOG.md  README.md  pyproject.toml
v2/python/anhurdb/: __init__.py
v2/python/anhurdb/client/: __init__.py  connection.py  exceptions.py
v2/python/anhurdb/crypto/: __init__.py  quantizer.py
v2/python/anhurdb/models/: __init__.py  enums.py  record.py  session.py
v2/python/anhurdb/query/: __init__.py  builder.py  executor.py  operators.py
v2/python/anhurdb/storage/: __init__.py  filesystem.py
v2/python/tests/: e2e_hardening_live.py  test_builder.py  test_client.py  test_crypto.py  test_entity_wire.py  test_hardening_2026_06.py  test_http_mock.py  test_integration.py  test_storage.py
v2/typescript/: .npmignore  CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.cjs.json  tsconfig.json  (+1 more)
(+65 files in other folders)
